--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="de">
+<head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <title>Praktikumspräsentation</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="curtain" id="curtain">
+        <div class="content">
+            <div class="menu" id="menu">
+                <ul>
+                    <li><a href="#about">Über den Betrieb</a></li>
+                    <li><a href="#tasks">Aufgaben</a></li>
+                    <li><a href="#feedback">Persönliches Feedback</a></li>
+                </ul>
+            </div>
+            <div class="title" id="title">
+                <h1>Mein Praktikum</h1>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
