--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praktikumspräsentation</title>
+    <title>Meine Praktikumspräsentation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="curtain" id="curtain">
-        <div class="content">
-            <div class="menu" id="menu">
-                <ul>
-                    <li><a href="#about">Über den Betrieb</a></li>
-                    <li><a href="#tasks">Aufgaben</a></li>
-                    <li><a href="#feedback">Persönliches Feedback</a></li>
-                </ul>
-            </div>
-            <div class="title" id="title">
-                <h1>Mein Praktikum</h1>
-            </div>
-        </div>
-    </div>
+    <header class="menu" id="menu">
+        <ul class="nav">
+            <li><a href="about.html">Über den Betrieb</a></li>
+            <li><a href="tasks.html">Aufgaben</a></li>
+            <li><a href="feedback.html">Persönliches Feedback</a></li>
+            <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+            <li><a href="the-end.html">Ende</a></li>
 
-    <script src="script.js"></script>
+        </ul>
+        <div class="logo"></div>
+    </header>
+    <div class="content">
+        <h1>Willkommen zu meiner Praktikumspräsentation</h1>
+        <p>Hier teile ich meine Erfahrungen und Erkenntnisse aus meinem Praktikum.</p>
+    </div>
 </body>
 </html>
