--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header class="menu" id="menu">
         <ul class="nav">
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Über den Betrieb</a></li>
             <li><a href="tasks.html">Aufgaben</a></li>
             <li><a href="feedback.html">Persönliches Feedback</a></li>
