--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meine Praktikumspräsentation</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="menu" id="menu">
-        <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Über den Betrieb</a></li>
-            <li><a href="tasks.html">Aufgaben</a></li>
-            <li><a href="feedback.html">Persönliches Feedback</a></li>
-            <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
-            <li><a href="the-end.html">Ende</a></li>
-
-        </ul>
-        <div class="logo"></div>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">Über den Betrieb</a></li>
+        <li><a href="tasks.html">Aufgaben</a></li>
+        <li><a href="feedback.html">Persönliches Feedback</a></li>
+        <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+        <li><a href="the-end.html">Ende</a></li>
+      </ul>
+      <div class="logo"></div>
     </header>
     <div class="content">
-        <h1>Willkommen zu meiner Praktikumspräsentation</h1>
-        <p>Hier teile ich meine Erfahrungen und Erkenntnisse aus meinem Praktikum.</p>
+      <h1>Willkommen zu meiner Praktikumspräsentation</h1>
+      <p>
+        Hier teile ich meine Erfahrungen und Erkenntnisse aus meinem Praktikum.
+      </p>
     </div>
-</body>
+  </body>
 </html>
