--- a/feedback.html
+++ b/feedback.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Persönliches Feedback</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="menu" id="menu">
-        <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Über den Betrieb</a></li>
-            <li><a href="tasks.html">Aufgaben</a></li>
-            <li><a href="feedback.html">Persönliches Feedback</a></li>
-            <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
-        </ul>
-        <div class="logo"></div>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">Über den Betrieb</a></li>
+        <li><a href="tasks.html">Aufgaben</a></li>
+        <li><a href="feedback.html">Persönliches Feedback</a></li>
+        <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+      </ul>
+      <div class="logo"></div>
     </header>
     <div class="content">
-        <h1>Persönliches Feedback</h1>
-        <p>Hier können Sie meine persönlichen Erfahrungen und Erkenntnisse aus meinem Praktikum nachlesen.</p>
+      <h1>Persönliches Feedback</h1>
+      <p>
+        Hier können Sie meine persönlichen Erfahrungen und Erkenntnisse aus
+        meinem Praktikum nachlesen.
+      </p>
 
-        <section class="feedback">
-            <h2>Mein Feedback</h2>
-            <p>[Teilen Sie Ihr persönliches Feedback, was Sie während des Praktikums gelernt haben und welche Erkenntnisse Sie gewonnen haben.]</p>
-        </section>
+      <section class="feedback">
+        <h2>Mein Feedback</h2>
+        <p>
+          [Teilen Sie Ihr persönliches Feedback, was Sie während des Praktikums
+          gelernt haben und welche Erkenntnisse Sie gewonnen haben.]
+        </p>
+      </section>
 
-        <section class="challenges">
-            <h2>Herausforderungen</h2>
-            <p>[Beschreiben Sie die Herausforderungen, die Sie während des Praktikums bewältigen mussten und wie Sie damit umgegangen sind.]</p>
-        </section>
+      <section class="challenges">
+        <h2>Herausforderungen</h2>
+        <p>
+          [Beschreiben Sie die Herausforderungen, die Sie während des Praktikums
+          bewältigen mussten und wie Sie damit umgegangen sind.]
+        </p>
+      </section>
 
-        <section class="lessons-learned">
-            <h2>Gelernte Lektionen</h2>
-            <p>[Welche wichtigen Lektionen haben Sie aus Ihrem Praktikum gezogen und wie werden sie sich auf Ihre Zukunft auswirken.]</p>
-        </section>
+      <section class="lessons-learned">
+        <h2>Gelernte Lektionen</h2>
+        <p>
+          [Welche wichtigen Lektionen haben Sie aus Ihrem Praktikum gezogen und
+          wie werden sie sich auf Ihre Zukunft auswirken.]
+        </p>
+      </section>
     </div>
-</body>
+  </body>
 </html>
