--- a/about.html
+++ b/about.html
@@ -1,64 +1,47 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Über unseren Betrieb</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Über den Betrieb</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <header class="menu" id="menu">
-      <ul class="nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Über den Betrieb</a></li>
-        <li><a href="tasks.html">Aufgaben</a></li>
-        <li><a href="feedback.html">Persönliches Feedback</a></li>
-        <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
-      </ul>
-      <div class="logo"></div>
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Über den Betrieb</a></li>
+            <li><a href="tasks.html">Aufgaben</a></li>
+            <li><a href="feedback.html">Persönliches Feedback</a></li>
+            <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+        </ul>
+        <div class="logo"></div>
     </header>
     <div class="content">
-      <h1>Willkommen bei [Firmenname]</h1>
-      <p>
-        Wir sind [Kurze Unternehmensbeschreibung]. Hier erfahren Sie mehr über
-        uns.
-      </p>
+        <h1>Über den Betrieb - DMK IT Solutions</h1>
+        <p>DMK IT Solutions ist ein agiles IT-Systemhaus, das sich auf ganzheitliche IT-Lösungen spezialisiert hat. Unsere integrativen Ansätze geben Ihrer IT-Struktur zukünftig Flexibilität und ermöglichen Ihren Erfolg.</p>
 
-      <section class="company-info">
-        <h2>Unser Unternehmen</h2>
-        <p>
-          [Ausführliche Beschreibung des Unternehmens, seiner Mission und
-          Geschichte.]
-        </p>
-      </section>
+        <p>Als Ihr persönlicher IT-Partner bieten wir professionelle Konzepte und Services, die auf individuelle Beratung, unternehmensspezifische Besonderheiten und die neuesten technischen Entwicklungen setzen. Unsere Leistungen umfassen Planung, Beratung, Umsetzung und Betrieb Ihrer IT-Systeme.</p>
 
-      <section class="company-culture">
-        <h2>Unsere Unternehmenskultur</h2>
-        <p>[Informationen über die Werte und Kultur des Unternehmens.]</p>
-      </section>
+        <p>Lassen Sie sich von unserem Portfolio überzeugen und erfahren Sie, wie wir IT-Projekte termingerecht, budgetgerecht und mit minimalem Störfaktor umsetzen. Unsere Partnerschaften mit wichtigen Anbietern im Markt halten uns stets auf dem neuesten Stand der technischen Entwicklungen.</p>
 
-      <section class="team">
-        <h2>Unser Team</h2>
-        <p>
-          [Eine Vorstellung einiger unserer Schlüsselpersonen und Mitarbeiter.]
-        </p>
-      </section>
+        <h2>News und Aktuelle Informationen</h2>
+        <p>20 MAI 2019 - LANCOM PLATINUM PARTNER</p>
+        <p>16 MRZ 2020 - WICHTIGE INFORMATIONEN!</p>
+        <p>31 MAI 2019 - BINTEC ELMEG CERTIFIED PARTNER</p>
 
-      <section class="achievements">
-        <h2>Unsere Erfolge</h2>
-        <p>
-          [Erwähnen Sie wichtige Auszeichnungen oder Meilensteine, die das
-          Unternehmen erreicht hat.]
-        </p>
-      </section>
+        <h2>Unsere Partner</h2>
+        <p>Starke Partner an unserer Seite. Die DMK-IT setzt als renommiertes IT-Systemhaus auf die besten IT-Produkte und IT-Lösungen.</p>
 
-      <section class="contact">
         <h2>Kontakt</h2>
-        <p>Sie können uns unter folgender Adresse erreichen:</p>
-        <p>[Adresse des Unternehmens]</p>
-        <p>E-Mail: [E-Mail-Adresse]</p>
-        <p>Telefon: [Telefonnummer]</p>
-      </section>
+        <p>Hauptsitz<br>
+        Hummelsbütteler Steindamm 80-82, D-22851 Norderstedt<br>
+        Telefon: +49 40 86688 0<br>
+        E-Mail: info@dmk-it.com<br>
+        Web: <a href="https://www.dmk-it.com">www.dmk-it.com</a></p>
+
+        <h2>Öffnungszeiten</h2>
+        <p>Wir sind für Sie erreichbar Montag bis Freitag von 09:00 - 18:00 Uhr.</p>
     </div>
-  </body>
+</body>
 </html>
