--- a/about.html
+++ b/about.html
@@ -19,29 +19,32 @@
     </header>
     <div class="content">
         <h1>Über den Betrieb - DMK IT Solutions</h1>
-        <p>DMK IT Solutions ist ein agiles IT-Systemhaus, das sich auf ganzheitliche IT-Lösungen spezialisiert hat. Unsere integrativen Ansätze geben Ihrer IT-Struktur zukünftig Flexibilität und ermöglichen Ihren Erfolg.</p>
+       <hr>
+        <p>Bei DMK IT Solutions handelt es sich um ein IT-Unternehmen, das sich auf umfassende IT-Lösungen spezialisiert hat.</p>
 
-        <p>Als Ihr persönlicher IT-Partner bieten wir professionelle Konzepte und Services, die auf individuelle Beratung, unternehmensspezifische Besonderheiten und die neuesten technischen Entwicklungen setzen. Unsere Leistungen umfassen Planung, Beratung, Umsetzung und Betrieb Ihrer IT-Systeme.</p>
+        <img src="/Bilder/chef.png.png" alt="Die Chefs von DMK IT Solutions">
 
-        <p>Lassen Sie sich von unserem Portfolio überzeugen und erfahren Sie, wie wir IT-Projekte termingerecht, budgetgerecht und mit minimalem Störfaktor umsetzen. Unsere Partnerschaften mit wichtigen Anbietern im Markt halten uns stets auf dem neuesten Stand der technischen Entwicklungen.</p>
-
-        <h2>News und Aktuelle Informationen</h2>
-        <p>20 MAI 2019 - LANCOM PLATINUM PARTNER</p>
-        <p>16 MRZ 2020 - WICHTIGE INFORMATIONEN!</p>
-        <p>31 MAI 2019 - BINTEC ELMEG CERTIFIED PARTNER</p>
-
-        <h2>Unsere Partner</h2>
-        <p>Starke Partner an unserer Seite. Die DMK-IT setzt als renommiertes IT-Systemhaus auf die besten IT-Produkte und IT-Lösungen.</p>
-
+        <p>Es werden, maßgeschneiderte Konzepte und wirklich gute Dienstleistungen angeboten, welche je nach Kunde zugeschnitten werden. Es wird eng mit den Kunden zusammengearbeitet, um deren speziellen Bedürfnisse zu verstehen. Diese Zusammenarbeit umfasst die Planung, Beratung, Umsetzung und Betreuung des IT-Systems.</p>
+       <hr>
+        <h2>Partner</h2>
+        <p>20.05.2019 - LANCOM PLATINUM PARTNER</p>
+        <p>31.05.2019 - BINTEC ELMEG CERTIFIED PARTNER</p>
+<hr>
+        
         <h2>Kontakt</h2>
         <p>Hauptsitz<br>
         Hummelsbütteler Steindamm 80-82, D-22851 Norderstedt<br>
         Telefon: +49 40 86688 0<br>
         E-Mail: info@dmk-it.com<br>
         Web: <a href="https://www.dmk-it.com">www.dmk-it.com</a></p>
+<hr>
+<h2>Scrum, eine gute Methode zum Projektmanagement</h2>
+<b>Was ist Scrum?</b>
 
-        <h2>Öffnungszeiten</h2>
-        <p>Wir sind für Sie erreichbar Montag bis Freitag von 09:00 - 18:00 Uhr.</p>
+<p>Bei Scrum, handelt es sich um eine Projektmanagement-Methode, die Teams dabei hilft, Softwareprojekte effizient und flexibel zu realisieren. In Scrum gibt es drei Hauptrollen: den Product Owner, der die Kundenanforderungen vertritt, das Entwicklungsteam, das die Arbeit erledigt, und den Scrum Master, der das Team unterstützt und Hindernisse beseitigt. Scrum fördert die Zusammenarbeit, Transparenz und schnelle Anpassung, um Softwareprodukte termingerecht und in hoher Qualität zu liefern.</p>
+<hr>    
+<h2>Öffnungszeiten</h2>
+        <p>Montag bis Freitag von 09:00 - 18:00 Uhr.</p>
     </div>
 </body>
 </html>
