--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <p>
         Hier teile ich meine Erfahrungen und Erkenntnisse aus meinem Praktikum.
       </p>
+      <img src="/Bilder/banner.png" alt="Willkommen zu meiner Praktikumspräsentation" />
+      <p>
+        Komm mit, und erfahre mehr über meinen Praktikumsbetrieb und meine Aufgaben. Viel Spaß beim Erkunden!
+      </p>
     </div>
   </body>
 </html>
