--- a/tasks.html
+++ b/tasks.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aufgaben</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Meine Praktikumspräsentation</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="menu" id="menu">
-        <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Über den Betrieb</a></li>
-            <li><a href="tasks.html">Aufgaben</a></li>
-            <li><a href="feedback.html">Persönliches Feedback</a></li>
-            <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
-        </ul>
-        <div class="logo"></div>
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">Über den Betrieb</a></li>
+        <li><a href="tasks.html">Aufgaben</a></li>
+        <li><a href="feedback.html">Persönliches Feedback</a></li>
+        <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+        <li><a href="the-end.html">Ende</a></li>
+      </ul>
+      <div class="logo"></div>
     </header>
     <div class="content">
-        <h1>Aufgaben während des Praktikums</h1>
-        <p>Hier finden Sie eine Liste der Hauptaufgaben, die ich während meines Praktikums durchgeführt habe.</p>
-
-        <ul class="task-list">
-            <li>[Aufgabe 1: Beschreiben Sie die Aufgabe und die erworbenen Fähigkeiten.]</li>
-            <li>[Aufgabe 2: Beschreiben Sie die Aufgabe und die erworbenen Fähigkeiten.]</li>
-            <li>[Aufgabe 3: Beschreiben Sie die Aufgabe und die erworbenen Fähigkeiten.]</li>
-            <li>[Aufgabe 4: Beschreiben Sie die Aufgabe und die erworbenen Fähigkeiten.]</li>
-        </ul>
+      <h1>Meine Aufgaben und Lernerfahrungen</h1>
+      <p>
+        In den zwei Wochen meines Praktikums habe ich nicht nur wertvolle Erfahrungen gesammelt, sondern auch meine Fähigkeiten im Bereich Webentwicklung erweitert.
+      </p>
+      <p>
+        <strong>JavaScript</strong> ist die Programmiersprache des Internets. Mit JavaScript kann man Webseiten interaktiv gestalten und dynamische Funktionen hinzufügen. Es bildet das Fundament jeder modernen Webanwendung.
+      </p>
+      <p>
+        <strong>HTML</strong> (Hypertext Markup Language) ist die Struktursprache des Webs. Es definiert die Elemente und Struktur einer Webseite, wie Überschriften, Absätze und Links.
+      </p>
+      <p>
+        <strong>CSS</strong> (Cascading Style Sheets) ist die Gestaltungssprache des Webs. Mit CSS kann man das Aussehen und das Layout einer Webseite definieren, einschließlich Farben, Schriftarten und Abstände.
+      </p>
+      <p>
+        <strong>Vue.js</strong> ist ein leistungsstarkes Frontend-Framework, das die Entwicklung von Webanwendungen vereinfacht. Es erlaubt die Erstellung interaktiver, reaktiver und wartbarer Anwendungen.
+      </p>
+      <p>
+        <strong>Der Pinia Store</strong> ist ein State-Management-Tool speziell für Vue.js. Er ermöglicht eine effiziente Verwaltung des Anwendungsstatus und des Datenaustauschs zwischen Komponenten.
+      </p>
+      <p>
+        Als praktisches Ergebnis meiner Lernreise habe ich eine kleine, aber leistungsstarke <strong>ToDo-App</strong> entwickelt. Diese Anwendung ermöglicht es, Aufgaben zu organisieren, Prioritäten festzulegen und den Fortschritt zu verfolgen. Sie nutzt JavaScript, Vue.js und den Pinia Store, um eine nahtlose Benutzererfahrung zu bieten.
+      </p>
+      <p>
+        Ich lade Sie herzlich ein, meine Aufgaben und Lernerfahrungen zu erkunden und meine ToDo-App in Aktion zu sehen. Viel Spaß beim Entdecken!
+      </p>
+      
     </div>
-</body>
+  </body>
 </html>
