--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="content">
       <h1>Willkommen zu meiner Praktikumspräsentation</h1>
       <p>
-        Hier teile ich meine Erfahrungen und Erkenntnisse aus meinem Praktikum.
+        Hier teile ich meine Erfahrungen und Erlebnisse aus meinem Praktikum.
       </p>
       <img src="/Bilder/banner.png" alt="Willkommen zu meiner Praktikumspräsentation" />
       <p>
