--- a/tasks.html
+++ b/tasks.html
@@ -16,35 +16,54 @@
         <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
         <li><a href="the-end.html">Ende</a></li>
       </ul>
-      <div class="logo"></div>
+      <div class="logo">Dein Logo</div>
     </header>
     <div class="content">
-      <h1>Meine Aufgaben und Lernerfahrungen</h1>
+      <h1>Meine Lernreise und Aufgaben</h1>
       <p>
-        In den zwei Wochen meines Praktikums habe ich nicht nur wertvolle Erfahrungen gesammelt, sondern auch meine Fähigkeiten im Bereich Webentwicklung erweitert.
+        Während meines Praktikums habe ich spannende Erfahrungen gesammelt und meine Fähigkeiten im Bereich Webentwicklung erweitert.
+      </p>
+      <div class="skill-item">
+        <img src="/Bilder/html.png" alt="HTML Logo" />
+        <strong>HTML</strong>
+        <p>
+          Die Struktursprache für Webseiten.
+        </p>
+      </div>
+      <div class="skill-item">
+        <img src="/Bilder/css.png" alt="CSS Logo" />
+        <strong>CSS</strong>
+        <p>
+          Die Gestaltungssprache für Webseiten.
+        </p>
+      </div>
+      <div class="skill-item">
+        <img src="/Bilder/javasript.png" alt="JavaScript Logo" />
+        <strong>JavaScript</strong>
+        <p>
+          Die Sprache für interaktive Webseiten.
+        </p>
+      </div>
+      <div class="skill-item">
+        <img src="/Bilder/vue.png" alt="Vue Logo" />
+        <strong>Vue.js</strong>
+        <p>
+          Ein leistungsstarkes Frontend-Framework.
+        </p>
+      </div>
+      <div class="skill-item">
+        <img src="/Bilder/pinia.png" alt="Pinia Logo" />
+        <strong>Pinia Store</strong>
+        <p>
+          Ein Tool zur effizienten Verwaltung des Anwendungsstatus.
+        </p>
+      </div>
+      <p>
+        Als praktisches Ergebnis meiner Reise habe ich eine <strong>ToDo-App</strong> entwickelt. Diese App basiert auf JavaScript, Vue.js und dem Pinia Store und ermöglicht dir, Aufgaben zu organisieren und deinen Fortschritt zu verfolgen.
       </p>
       <p>
-        <strong>JavaScript</strong> ist die Programmiersprache des Internets. Mit JavaScript kann man Webseiten interaktiv gestalten und dynamische Funktionen hinzufügen. Es bildet das Fundament jeder modernen Webanwendung.
+        Ich lade dich herzlich dazu ein, meine Lernerfahrungen zu erkunden und die ToDo-App in Aktion zu sehen. <a href="https://lucent-scone-b7c139.netlify.app">Hier ist der Link zu deiner ToDo-App</a>. Viel Spaß beim Entdecken!
       </p>
-      <p>
-        <strong>HTML</strong> (Hypertext Markup Language) ist die Struktursprache des Webs. Es definiert die Elemente und Struktur einer Webseite, wie Überschriften, Absätze und Links.
-      </p>
-      <p>
-        <strong>CSS</strong> (Cascading Style Sheets) ist die Gestaltungssprache des Webs. Mit CSS kann man das Aussehen und das Layout einer Webseite definieren, einschließlich Farben, Schriftarten und Abstände.
-      </p>
-      <p>
-        <strong>Vue.js</strong> ist ein leistungsstarkes Frontend-Framework, das die Entwicklung von Webanwendungen vereinfacht. Es erlaubt die Erstellung interaktiver, reaktiver und wartbarer Anwendungen.
-      </p>
-      <p>
-        <strong>Der Pinia Store</strong> ist ein State-Management-Tool speziell für Vue.js. Er ermöglicht eine effiziente Verwaltung des Anwendungsstatus und des Datenaustauschs zwischen Komponenten.
-      </p>
-      <p>
-        Als praktisches Ergebnis meiner Lernreise habe ich eine kleine, aber leistungsstarke <strong>ToDo-App</strong> entwickelt. Diese Anwendung ermöglicht es, Aufgaben zu organisieren, Prioritäten festzulegen und den Fortschritt zu verfolgen. Sie nutzt JavaScript, Vue.js und den Pinia Store, um eine nahtlose Benutzererfahrung zu bieten.
-      </p>
-      <p>
-        Ich lade Sie herzlich ein, meine Aufgaben und Lernerfahrungen zu erkunden und meine ToDo-App in Aktion zu sehen. Viel Spaß beim Entdecken!
-      </p>
-      
     </div>
   </body>
 </html>
