--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
             <li><a href="tasks.html">Aufgaben</a></li>
             <li><a href="feedback.html">Persönliches Feedback</a></li>
             <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+            <li><a href="end.html">Ende</a></li>
         </ul>
         <div class="logo"></div>
     </header>
@@ -41,7 +42,7 @@
 <h2>Scrum, eine gute Methode zum Projektmanagement</h2>
 <b>Was ist Scrum?</b>
 
-<p>Bei Scrum, handelt es sich um eine Projektmanagement-Methode, die Teams dabei hilft, Softwareprojekte effizient und flexibel zu realisieren. In Scrum gibt es drei Hauptrollen: den Product Owner, der die Kundenanforderungen vertritt, das Entwicklungsteam, das die Arbeit erledigt, und den Scrum Master, der das Team unterstützt und Hindernisse beseitigt. Scrum fördert die Zusammenarbeit, Transparenz und schnelle Anpassung, um Softwareprodukte termingerecht und in hoher Qualität zu liefern.</p>
+<p><b>Scrum</b> ist eine <b>Projektmanagement-Methode</b>, die Teams dabei hilft, Softwareprojekte <b>effizient</b> und <b>flexibel</b> zu realisieren. In <b>Scrum</b> gibt es drei Hauptrollen: der <b>Product Owner</b>, der die Kundenanforderungen vertritt, das <b>Entwicklungsteam</b>, das die Arbeit erledigt, und der <b>Scrum Master</b>, der das Team unterstützt und Hindernisse beseitigt. <b>Scrum</b> fördert die <b>Zusammenarbeit</b>, <b>Transparenz</b> und <b>schnelle Anpassung</b>, um Softwareprodukte termingerecht und in <b>hoher Qualität</b> zu liefern.</p>
 <hr>    
 <h2>Öffnungszeiten</h2>
         <p>Montag bis Freitag von 09:00 - 18:00 Uhr.</p>
