--- a/end.html
+++ b/end.html
@@ -20,20 +20,17 @@
     </header>
     <div class="content">
       <h1>Abschluss</h1>
+      <img src="/Bilder/danke.png" alt="danke">
+
       <p>
         Vielen Dank, dass Sie sich die Zeit genommen haben, meine
-        Praktikumspräsentation anzusehen. Ich schätze Ihre Unterstützung und
-        Interesse sehr.
+        Praktikumspräsentation anzusehen. Ich schätze Ihr Interesse und Ihre Unterstützung sehr.
       </p>
+      <p>
+        Während meines Praktikums bei DMK IT Solutions konnte ich wertvolle Erfahrungen sammeln und meine Fähigkeiten in der Webentwicklung erheblich verbessern. Diese Reise hat meine Leidenschaft für IT und Programmierung weiter vertieft, und ich freue mich auf zukünftige Projekte und Herausforderungen.
+      </p>
+      <img src="/Bilder/spongebob.png" alt="keine Fragen, bitte" width="1414px" height="706px">
 
-      <section class="contact">
-        <h2>Kontakt</h2>
-        <p>
-          Für Fragen oder weitere Informationen stehe ich Ihnen gerne zur
-          Verfügung:
-        </p>
-        <p>E-Mail: [Deine E-Mail-Adresse]</p>
-      </section>
     </div>
   </body>
 </html>
