--- a/feedback.html
+++ b/feedback.html
@@ -14,37 +14,34 @@
         <li><a href="tasks.html">Aufgaben</a></li>
         <li><a href="feedback.html">Persönliches Feedback</a></li>
         <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+        <li><a href="end.html">Ende</a></li>
       </ul>
       <div class="logo"></div>
     </header>
     <div class="content">
       <h1>Persönliches Feedback</h1>
       <p>
-        Hier können Sie meine persönlichen Erfahrungen und Erkenntnisse aus
-        meinem Praktikum nachlesen.
+        Ich hatte eine großartige Zeit bei DMK IT Solutions und bin dankbar für die bereichernde Erfahrung.
       </p>
 
       <section class="feedback">
         <h2>Mein Feedback</h2>
         <p>
-          [Teilen Sie Ihr persönliches Feedback, was Sie während des Praktikums
-          gelernt haben und welche Erkenntnisse Sie gewonnen haben.]
+          Während meines Praktikums bei DMK IT Solutions habe ich spannende Einblicke in die Welt der Webentwicklung gewonnen. Ich habe gelernt, wie wichtig Teamarbeit und Kommunikation sind. Diese Erfahrungen haben meine Leidenschaft für die IT und insbesondere die Webentwicklung weiter verstärkt.
         </p>
       </section>
 
       <section class="challenges">
-        <h2>Herausforderungen</h2>
+        <h2>Knifflige Situationen</h2>
         <p>
-          [Beschreiben Sie die Herausforderungen, die Sie während des Praktikums
-          bewältigen mussten und wie Sie damit umgegangen sind.]
+          Während meiner Zeit bei DMK IT Solutions gab es einige kleinere Herausforderungen, wie den Umgang mit Vue, die Anpassung von normalem Code in Visual Studio Code an die Struktur in Vue und das Fehlerbeheben. Aber auch das habe ich mit Hilfe gemeistert und diese kniffligen Situationen überstanden. Ich habe gelernt, flexibel zu sein, Probleme zu lösen und mich ständig zu verbessern, was mir in meiner (hoffentlich) zukünftigen Ausbildung bei DMK IT Solutions sicherlich zugutekommen wird.
         </p>
       </section>
 
       <section class="lessons-learned">
-        <h2>Gelernte Lektionen</h2>
+        <h2>Mitgenommene Erfahrungen</h2>
         <p>
-          [Welche wichtigen Lektionen haben Sie aus Ihrem Praktikum gezogen und
-          wie werden sie sich auf Ihre Zukunft auswirken.]
+          Dieses Praktikum hat mir gezeigt, wie wichtig lebenslanges Lernen ist. Außerdem habe ich verstanden, dass es entscheidend ist, nachzufragen, wenn man etwas nicht verstanden hat, und gemeinsam das Problem anzugehen. Es ist immer wichtig, offen für neue Herausforderungen zu sein. Meine Zeit bei DMK IT Solutions hat mir auch verdeutlicht, wie wertvoll es ist, in einem motivierten und unterstützenden Team zu arbeiten.
         </p>
       </section>
     </div>
