--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </p>
       <img src="/Bilder/banner.png" alt="Willkommen zu meiner Praktikumspräsentation" />
       <p>
-        Komm mit, und erfahre mehr über meinen Praktikumsbetrieb und meine Aufgaben. Viel Spaß beim Erkunden!
+        Erfahre mehr über meinen Praktikumsbetrieb und meine Aufgaben. Viel Spaß beim Erkunden!
       </p>
     </div>
   </body>
