--- a/praktisches-ergebnis.html
+++ b/praktisches-ergebnis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Praktisches Ergebnis: Meine Todo-App</title>
+    <title>Meine Praktikums-Tage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,39 +14,47 @@
             <li><a href="tasks.html">Aufgaben</a></li>
             <li><a href="feedback.html">Persönliches Feedback</a></li>
             <li><a href="praktisches-ergebnis.html">Praktisches Ergebnis</a></li>
+            <li><a href="end.html">Ende</a></li>
         </ul>
         <div class="logo"></div>
     </header>
     <div class="content">
-        <h1>Praktisches Ergebnis: Meine Todo-App</h1>
-        <p>Hier zeige ich Ihnen meine selbst programmierte Todo-App und erzähle mehr über ihre Funktionen und Entstehung.</p>
+        <h1>Meine Praktikums-Tage</h1>
+        <p>Hier gebe ich einen Einblick in meine Arbeitstage und die Entwicklung meiner Todo-App.</p>
 
-        <section class="app-description">
-            <h2>App-Beschreibung</h2>
-            <p>Meine Todo-App ist eine Anwendung zur Verwaltung von Aufgaben und Erinnerungen. Sie bietet folgende Funktionen:</p>
-            <ul>
-                <li>Erstellung von Aufgaben mit Titel und Beschreibung</li>
-                <li>Priorisierung von Aufgaben</li>
-                <li>Markieren von Aufgaben als erledigt</li>
-                <li>Zeitgesteuerte Erinnerungen</li>
-            </ul>
+        <section class="work-day">
+            <h2>Tag 1: Montag</h2>
+            <p>Heute habe ich mit der Entwicklung meiner Todo-App mit Vue.js begonnen. Ich habe mir Gedanken über das Design gemacht und die Grundideen festgehalten.</p>
         </section>
 
-        <section class="development-process">
-            <h2>Entwicklungsprozess</h2>
-            <p>Die Entwicklung meiner Todo-App war eine spannende Reise. Ich habe folgende Schritte unternommen:</p>
-            <ol>
-                <li>Projektkonzeption und -planung</li>
-                <li>Design und Benutzeroberfläche gestalten</li>
-                <li>Frontend- und Backend-Entwicklung</li>
-                <li>Testen und Debuggen</li>
-                <li>Bereitstellung und Veröffentlichung</li>
-            </ol>
+        <section class="work-day">
+            <h2>Tag 2: Dienstag</h2>
+            <p>Ich habe heute das grundlegende Layout der Todo-App erstellt und sie mit den wichtigsten Elementen versehen.</p>
         </section>
 
-        <section class="lessons-learned">
-            <h2>Gelernte Lektionen</h2>
-            <p>Während des Entwicklungsprozesses habe ich wertvolle Erfahrungen gesammelt, wie z.B. Problemlösungsfähigkeiten, Teamarbeit und Projektmanagement.</p>
+        <section class="work-day">
+            <h2>Tag 3: Mittwoch</h2>
+            <p>Heute habe ich am Design der App gearbeitet und das Farbthema ausgewählt. Außerdem habe ich Funktionen für das Hinzufügen von Aufgaben implementiert.</p>
+        </section>
+
+        <section class="work-day">
+            <h2>Tag 4: Donnerstag</h2>
+            <p>Ich habe meine Arbeit an der Todo-App fortgesetzt und an der Umsetzung von Features für die Aufgabenpriorisierung gearbeitet.</p>
+        </section>
+
+        <section class="work-day">
+            <h2>Tag 5: Freitag</h2>
+            <p>Heute habe ich mich mit komplexeren Funktionen befasst, insbesondere im Umgang mit Arrays und Objekten. Ich habe auch mein GitHub-Profil aufgehübscht und das Projekt in ein Repository gepusht.</p>
+        </section>
+
+        <section class="work-day">
+            <h2>Zusätzliche Woche: Montag</h2>
+            <p>Ich habe mich entschieden, mein Praktikum um eine weitere Woche zu verlängern. Während dieser Zeit habe ich mich weiter mit JavaScript-Objekten und Strings beschäftigt.</p>
+        </section>
+
+        <section class="work-day">
+            <h2>Zusätzliche Woche: Freitag</h2>
+            <p>Ich habe meine Arbeit an der Todo-App abgeschlossen und sie erfolgreich online veröffentlicht. Hier geht es zu der <a href="https://lucent-scone-b7c139.netlify.app/">To-Do App</a></p>
         </section>
     </div>
 </body>
