--- a/tasks.html
+++ b/tasks.html
@@ -25,38 +25,23 @@
       </p>
       <div class="skill-item">
         <img src="/Bilder/html.png" alt="HTML Logo" />
-        <strong>HTML</strong>
-        <p>
-          Die Struktursprache für Webseiten.
-        </p>
+        <strong>HTML:</strong> Die Struktursprache für Webseiten.
       </div>
       <div class="skill-item">
         <img src="/Bilder/css.png" alt="CSS Logo" />
-        <strong>CSS</strong>
-        <p>
-          Die Gestaltungssprache für Webseiten.
-        </p>
+        <strong>CSS:</strong> Die Gestaltungssprache für Webseiten.
       </div>
       <div class="skill-item">
         <img src="/Bilder/javasript.png" alt="JavaScript Logo" />
-        <strong>JavaScript</strong>
-        <p>
-          Die Sprache für interaktive Webseiten.
-        </p>
+        <strong>JavaScript:</strong> Die Sprache für interaktive Webseiten.
       </div>
       <div class="skill-item">
         <img src="/Bilder/vue.png" alt="Vue Logo" />
-        <strong>Vue.js</strong>
-        <p>
-          Ein leistungsstarkes Frontend-Framework.
-        </p>
+        <strong>Vue.js:</strong> Ein leistungsstarkes Frontend-Framework.
       </div>
       <div class="skill-item">
         <img src="/Bilder/pinia.png" alt="Pinia Logo" />
-        <strong>Pinia Store</strong>
-        <p>
-          Ein Tool zur effizienten Verwaltung des Anwendungsstatus.
-        </p>
+        <strong>Pinia Store:</strong> Ein Tool zur effizienten Verwaltung des Anwendungsstatus.
       </div>
       <p>
         Als praktisches Ergebnis meiner Reise habe ich eine <strong>ToDo-App</strong> entwickelt. Diese App basiert auf JavaScript, Vue.js und dem Pinia Store und ermöglicht dir, Aufgaben zu organisieren und deinen Fortschritt zu verfolgen.
